<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#E0F7FA"
    tools:context=".ListFragment">

    <ImageView
        android:id="@+id/list_image"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/grid_image" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/list_image"
        android:layout_toRightOf="@id/list_image"
        android:text="@string/song_title"
        android:textColor="#3E2723"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_title"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/list_image"
        android:layout_toRightOf="@id/list_image"
        android:text="@string/song_artist"
        android:textColor="#5D4037"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/song_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/play"
        android:textColor="#5D4037"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/list_title"
        android:layout_margin="10dp"
        android:text="@string/song_time"
        android:textColor="#5D4037"
        android:textSize="15sp" />

</RelativeLayout>