<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentPlayingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/playing_image"
        android:scaleType="centerCrop"
        android:src="@drawable/playing" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/currently_playing"
        android:textColor="#E0F7FA"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp">

        <Button
            android:id="@+id/previous_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:drawSelectorOnTop="true"
            android:text="@string/previous"
            android:textColor="#3E2723"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:drawSelectorOnTop="true"
            android:text="@string/play"
            android:textColor="#3E2723"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:drawSelectorOnTop="true"
            android:text="@string/next"
            android:textColor="#3E2723"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>